@@ -38,6 +38,12 @@ See <<aggregating-request-reply>> for more information.
 The `ContainerProperties` provides an `authorizationExceptionRetryInterval` option to let the listener container to retry after any `AuthorizationException` is thrown by the `KafkaConsumer`.
 See its JavaDocs and <<kafka-container>> for more information.
 
+==== @KafkaListener
+
+The `@KafkaListener` annotation has a new property `splitIterables`; default true.
+When a replying listener returns an `Iterable` this property controls whether the return result is sent as a single record or a record for each element is sent.
+See <<annotation-send-to>> for more information.
+
 === Migration Guide
 
 * This release is essentially the same as the 2.3.x line, except it has been compiled against the 2.4 `kafka-clients` jar, due to a binary incompatibility.
